--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ Licence URI: https://www.os-templates.com/template-terms
 <html lang="">
 <!-- To declare your language - read more here: https://www.w3.org/International/questions/qa-html-language-declarations -->
 <head>
-<title>Nekmit</title>
+<title>SquidwardCC</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 <link href="layout/styles/layout.css" rel="stylesheet" type="text/css" media="all">
@@ -27,7 +27,7 @@ Licence URI: https://www.os-templates.com/template-terms
   <header id="header" class="hoc clear">
     <div id="logo" class="fl_left"> 
       <!-- ################################################################################################ -->
-      <h1><a href="index.html">Nekmit</a></h1>
+      <h1><a href="index.html">Squidward Community College</a></h1>
       <!-- ################################################################################################ -->
     </div>
     <nav id="mainav" class="fl_right"> 
@@ -70,12 +70,12 @@ Licence URI: https://www.os-templates.com/template-terms
   <div id="pageintro" class="hoc clear"> 
     <!-- ################################################################################################ -->
     <article>
-      <h3 class="heading">Suspendisse potenti</h3>
-      <p>Arcu mi porttitor est non felis aliquam ullamcorper sed porttitor accumsan arcu maecenas lorem elit tristique quis iaculis at euismod vel arcu donec et lorem.</p>
+      <h3 class="heading">Welcome to Squidward CC</h3>
+      <p>Where the clock of evolution ticks backwards.</p>
       <footer>
         <ul class="nospace inline pushright">
-          <li><a class="btn" href="#">Integer</a></li>
-          <li><a class="btn inverse" href="#">Egestas</a></li>
+          <li><a class="btn" href="#">View our classes</a></li>
+          <li><a class="btn inverse" href="#">More information</a></li>
         </ul>
       </footer>
     </article>
@@ -98,7 +98,7 @@ Licence URI: https://www.os-templates.com/template-terms
         <div class="block clear"><a href="#"><i class="fas fa-envelope"></i></a> <span><strong>Send us a mail:</strong> support@domain.com</span></div>
       </li>
       <li class="one_quarter">
-        <div class="block clear"><a href="#"><i class="fas fa-clock"></i></a> <span><strong> Mon. - Sat.:</strong> 08.00am - 18.00pm</span></div>
+        <div class="block clear"><a href="#"><i class="fas fa-clock"></i></a> <span><strong> Thurs. - Tues.:</strong> 08:00PM - 4:00AM</span></div>
       </li>
       <li class="one_quarter">
         <div class="block clear"><a href="#"><i class="fas fa-map-marker-alt"></i></a> <span><strong>Come visit us:</strong> Directions to <a href="#">our location</a></span></div>
@@ -116,48 +116,48 @@ Licence URI: https://www.os-templates.com/template-terms
     <!-- ################################################################################################ -->
     <section id="services">
       <div class="sectiontitle">
-        <p class="nospace font-xs">Mauris tempor aliquam venenatis</p>
-        <h6 class="heading">Curabitur at odio sed enim</h6>
+        <p class="nospace font-xs">Study with the best</p>
+        <h6 class="heading">Our areas of academic study</h6>
       </div>
       <ul class="nospace group grid-3">
         <li class="one_third">
-          <article><a href="#"><i class="fas fa-spray-can"></i></a>
-            <h6 class="heading">Vehicula</h6>
+          <article><a href="#"><i class="fas fa-cogs"></i></a>
+            <h6 class="heading">Engineering</h6>
             <p>Nulla cursus metus non tortor erat turpis sed semper risus nisi id nunc ut congue cursus tortor aliquam.</p>
             <footer><a href="#">More Details &raquo;</a></footer>
           </article>
         </li>
         <li class="one_third">
-          <article><a href="#"><i class="fas fa-user-secret"></i></a>
-            <h6 class="heading">Porttitor</h6>
+          <article><a href="#"><i class="fas fa-not-equal"></i></a>
+            <h6 class="heading">Math</h6>
             <p>Vehicula nisl ac porta blandit velit risus lobortis turpis sit amet lobortis sapien dui id neque suspendisse.</p>
             <footer><a href="#">More Details &raquo;</a></footer>
           </article>
         </li>
         <li class="one_third">
-          <article><a href="#"><i class="fas fa-couch"></i></a>
-            <h6 class="heading">Pulvinar</h6>
+          <article><a href="#"><i class="fas fa-music"></i></a>
+            <h6 class="heading">Music</h6>
             <p>Vel justo mattis magna vestibulum molestie quisque sagittis in a enim in metus ultrices tristique nam semper.</p>
             <footer><a href="#">More Details &raquo;</a></footer>
           </article>
         </li>
         <li class="one_third">
-          <article><a href="#"><i class="fas fa-crow"></i></a>
-            <h6 class="heading">Ultricies</h6>
+          <article><a href="#"><i class="fas fa-paint-brush"></i></a>
+            <h6 class="heading">Art</h6>
             <p>Tincidunt metus nunc ornare mi at nibh ut ante est imperdiet dignissim eleifend sit amet lacinia tempor justo.</p>
             <footer><a href="#">More Details &raquo;</a></footer>
           </article>
         </li>
         <li class="one_third">
-          <article><a href="#"><i class="fas fa-dolly-flatbed"></i></a>
-            <h6 class="heading">Vestibulum</h6>
+          <article><a href="#"><i class="fas fa-space-shuttle"></i></a>
+            <h6 class="heading">Physics</h6>
             <p>Pellentesque malesuada sed et nulla sit amet nisi scelerisque consectetuer vivamus odio donec metus libero semper.</p>
             <footer><a href="#">More Details &raquo;</a></footer>
           </article>
         </li>
         <li class="one_third">
-          <article><a href="#"><i class="fas fa-road"></i></a>
-            <h6 class="heading">Lobortis</h6>
+          <article><a href="#"><i class="fas fa-vials"></i></a>
+            <h6 class="heading">Chemistry</h6>
             <p>Quis suscipit ut aliquam a metus ut interdum risus id luctus consectetuer velit neque ornare quam at ornare.</p>
             <footer><a href="#">More Details &raquo;</a></footer>
           </article>
